// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isInnBusinessAppPage": true,
    "isLoading": false,
    "promotionBannerData": undefined,
  },
}
`;

exports[`Search page should match the snapshot 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="SearchPage"
      />
    </div>
  </div>
</div>
`;

exports[`Search page should match the snapshot 2`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="SearchPage"
      />
    </div>
  </div>
</div>
`;

exports[`Search page should match the snapshot with user details  business undefined 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="SearchPage"
      />
    </div>
  </div>
</div>
`;

exports[`Search page should match the snapshot with user details business undefined 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    />
  </div>
</div>
`;

exports[`Search page should match the snapshot with user details undefined 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    />
  </div>
</div>
`;

exports[`Search page should match the snapshot with user details undefined 2`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="SearchPage"
      />
    </div>
  </div>
</div>
`;
